<resources>
    <string name="app_name">KillBillKit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_commit">Commit</string>

    <string name="all_inouts">App payments and incomes : </string>

    <string name="manage_pockets">Manage Pockets</string>
    <string name="add_pocket">Add a Pocket</string>
    <string name="add_budget">Add a Budget</string>
    <string name="remove_pockets">Remove Pockets</string>
    <string name="add_payment">Add a Payment</string>
    <string name="add_income">Add an Income</string>

    <string name="total_balance">Total Balance : </string>
    <string name="total_balance_real">Real Balance : </string>

    <string name="payment_name_hint">Payment Name</string>
    <string name="income_name_hint">Income Name</string>
    <string name="amount_hint">Amount</string>
    <string name="pocket_type_hint">Pocket Type</string>


    <string name="invalid_name_amount">Invalid name or amount ! </string>

    <!-- 创建pocket -->
    <string name="pocket_name_hint">Pocket Name</string>
    <string name="pocket_balance_hint">Pocket Balance</string>
    <string name="pocket_bill_day">Bill Day</string>
    <string name="pocket_repay_day">Repayment Day</string>

    <string name="nav_menu_pockets">Pockets</string>
    <string name="nav_menu_manage">Manage</string>
    <string name="nav_menu_common">Common</string>

    <string name="action_manage_inouts">Manage Inouts</string>
    <string name="action_manage_pockets">Manage Pockets</string>

    <!-- Pocket Types -->
    <!--<string name="type_unspecified">Unspecified</string>-->
    <!--<string name="type_credit">Credit</string>-->
    <!--<string name="type_loan">Loan</string>-->
    <!--<string name="type_emergency">Emergency</string>-->
</resources>
