<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_payment"
        android:orderInCategory="100"
        android:title="@string/add_payment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_income"
        android:orderInCategory="100"
        android:title="@string/add_income"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_budget"
        android:orderInCategory="100"
        android:title="@string/add_budget"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_add_pockets"
        android:orderInCategory="100"
        android:title="@string/add_pocket"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_pockets"
        android:orderInCategory="100"
        android:title="@string/remove_pockets"
        app:showAsAction="never"
        android:visible="false"
        />
</menu>
