<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/nav_menu_pockets">
        <menu >
            <group
                android:id="@+id/pocket_menu_group"
                android:checkableBehavior="single">
                <!--<item-->
                <!--android:id="@+id/nav_camera"-->
                <!--android:icon="@drawable/ic_menu_camera"-->
                <!--android:title="Import" />-->
                <!--<item-->
                <!--android:id="@+id/nav_gallery"-->
                <!--android:icon="@drawable/ic_menu_gallery"-->
                <!--android:title="Gallery" />-->
                <!--<item-->
                <!--android:id="@+id/nav_slideshow"-->
                <!--android:icon="@drawable/ic_menu_slideshow"-->
                <!--android:title="Slideshow" />-->
                <!--<item-->
                <!--android:id="@+id/nav_manage"-->
                <!--android:icon="@drawable/ic_menu_manage"-->
                <!--android:title="Tools" />-->
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/manage"
        android:title="@string/nav_menu_manage"
        >
        <menu>
            <item
                android:id="@+id/manage_inouts"
                android:title="@string/action_manage_inouts" />
            <item
                android:id="@+id/manage_pockets"
                android:title="@string/action_manage_pockets" />
        </menu>
    </item>
    <item
        android:id="@+id/communicate"
        android:title="@string/nav_menu_common">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_exit" />
        </menu>
    </item>

</menu>
